# genai-repo-chatbot

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
rag/: main.py  streamlit_app.py
