[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Ahmed <heydude08080@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-google-genai = "^2.0.0"
faiss-cpu = "^1.8.0.post1"
sentence-transformers = "^3.1.0"
spacy = "^3.7.6"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
