[tool.poetry]
name = "panaversity-chatbot"
version = "0.1.0"
description = ""
authors = ["Ahmed <ahmed369ww@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-google-genai = "^2.0.0"
faiss-cpu = "^1.8.0.post1"
sentence-transformers = "^3.1.0"
streamlit = "^1.38.0"
spacy = "^3.7.6"
chardet = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
